@startuml

title __BABYMONITOR's Class Diagram__\n

  namespace  {
    namespace ecture.babymonitor {
      class lecture.babymonitor.Baby {
          - babyname : String
          - crying : boolean
          - level : int
          - observers : ArrayList
          + Baby()
          + notifyObservers()
          + registerObserver()
          + removeObserver()
          + setData()
      }
    }
  }
  

  namespace  {
    namespace ecture.babymonitor {
      class lecture.babymonitor.BabyMonitorAdvanced {
          - babyname : String
          - crying : boolean
          - level : int
          - name : String
          + BabyMonitorAdvanced()
          + display()
          + update()
      }
    }
  }
  

  namespace  {
    namespace ecture.babymonitor {
      class lecture.babymonitor.BabyMonitorSimple {
          - crying : boolean
          - name : String
          + BabyMonitorSimple()
          + display()
          + turnOff()
          + update()
      }
    }
  }
  

  namespace  {
    namespace ecture.babymonitor {
      interface lecture.babymonitor.Observer {
          {abstract} + update()
      }
    }
  }
  

  namespace  {
    namespace ecture.babymonitor {
      interface lecture.babymonitor.Subject {
          {abstract} + notifyObservers()
          {abstract} + registerObserver()
          {abstract} + removeObserver()
      }
    }
  }
  

  namespace  {
    namespace ecture.babymonitor {
      class lecture.babymonitor.TestBabyMonitor {
          {static} + main()
      }
    }
  }
  

  lecture.babymonitor.Baby .up.|> lecture.babymonitor.Subject
  lecture.babymonitor.BabyMonitorAdvanced .up.|> lecture.babymonitor.Observer
  lecture.babymonitor.BabyMonitorAdvanced o-- lecture.babymonitor.Subject : cdata
  lecture.babymonitor.BabyMonitorAdvanced o-- lecture.babymonitor.Subject : mdata
  lecture.babymonitor.BabyMonitorSimple .up.|> lecture.babymonitor.Observer
  lecture.babymonitor.BabyMonitorSimple o-- lecture.babymonitor.Subject : mdata


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
